--- a/Hiwjcn.Web/Web.config
+++ b/Hiwjcn.Web/Web.config
@@ -52,12 +52,11 @@
 
     <add key="FeedBackEmail" value="reception@epcservices.com.cn" />
 
-    <add key="SSOLoginUrl" value="http://localhost/account/login/" />
-    <add key="SSOLogoutUrl" value="http://localhost/account/logoutsso/" />
-    <add key="CheckLoginInfoUrl" value="http://localhost/account/CheckChildSiteToken/" />
-
-    <add key="CallBackUrl" value="Account/GetCallBackResult/" />
-    <add key="DefaultRedirectUrl" value="Page/Home/" />
+    <add key="SSOLoginUrl" value="http://localhost:51735/sso/login/" />
+    <add key="SSOLogoutUrl" value="http://localhost:51735/sso/logout/" />
+    <add key="CheckLoginInfoUrl" value="http://sso.qipeilong.cn/sso/CheckLoginInfo/" />
+    <add key="WebToken" value="***" />
+    <add key="DefaultRedirectUrl" value="http://sso.qipeilong.cn/user/userlist/" />
 
     <add key="QiniuAccessKey" value="IJ0GgfyMaCR_k-4yOVX6Ji_LImhMxjcnvOz2zBNP" />
     <add key="QiniuSecretKey" value="Kk5-w2nxc1b_MpjhC4ocPr9jfK36O11vaGVEY6hD" />
