--- a/Hiwjcn.Test/Hiwjcn.Test.csproj
+++ b/Hiwjcn.Test/Hiwjcn.Test.csproj
@@ -131,6 +131,7 @@
     <Compile Include="UnitTest2.cs" />
     <Compile Include="UnitTest3.cs" />
     <Compile Include="UnitTest4.cs" />
+    <Compile Include="UnitTest5.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hiwjcn.Core\Hiwjcn.Core.csproj">
