--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -230,6 +230,7 @@
     <Compile Include="extension\ConvertExtension.cs" />
     <Compile Include="extension\DictExtension.cs" />
     <Compile Include="extension\ElasticsearchExtension.cs" />
+    <Compile Include="extension\EnumExtension.cs" />
     <Compile Include="extension\LogExtension.cs" />
     <Compile Include="extension\PollyExtension.cs" />
     <Compile Include="extension\StringExtension.cs" />
