--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -260,6 +260,7 @@
     <Compile Include="mq\RabbitMQExtension.cs" />
     <Compile Include="mq\RabbitMQSection.cs" />
     <Compile Include="mvc\CookieHelper.cs" />
+    <Compile Include="mvc\MvcExtension.cs" />
     <Compile Include="mvc\plugin\BasePaymentController.cs" />
     <Compile Include="mvc\plugin\BasePluginController.cs" />
     <Compile Include="mvc\RequestHelper.cs" />
