--- a/ConsoleApp/packages.config
+++ b/ConsoleApp/packages.config
@@ -9,6 +9,8 @@
   <package id="NEST" version="2.4.6" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Polly" version="5.0.6" targetFramework="net45" />
+  <package id="SuperSocket" version="1.6.6.1" targetFramework="net45" />
+  <package id="SuperSocket.WebSocket" version="1.6.6.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
