--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -199,6 +199,7 @@
     <Compile Include="api\UmengPushHelper.cs" />
     <Compile Include="cache\CacheExtension.cs" />
     <Compile Include="cache\CacheManager.cs" />
+    <Compile Include="cache\FireWall.cs" />
     <Compile Include="cache\ICacheProvider.cs" />
     <Compile Include="cache\MemoryCacheProvider.cs" />
     <Compile Include="cache\MultiLayerCache.cs" />
