--- a/WindowsFormApp/WindowsFormApp.csproj
+++ b/WindowsFormApp/WindowsFormApp.csproj
@@ -77,6 +77,9 @@
     <Reference Include="NPOI.OpenXmlFormats">
       <HintPath>..\packages\NPOI.2.1.3.1\lib\net40\NPOI.OpenXmlFormats.dll</HintPath>
     </Reference>
+    <Reference Include="RabbitMQ.Client, Version=3.6.6.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <HintPath>..\packages\RabbitMQ.Client.3.6.6\lib\net45\RabbitMQ.Client.dll</HintPath>
+    </Reference>
     <Reference Include="Robots, Version=1.0.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\NRobotsPatched.1.0.5.0\lib\net40\Robots.dll</HintPath>
       <Private>True</Private>
@@ -121,6 +124,12 @@
     <Compile Include="MakeSign.Designer.cs">
       <DependentUpon>MakeSign.cs</DependentUpon>
     </Compile>
+    <Compile Include="mq.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="mq.Designer.cs">
+      <DependentUpon>mq.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisMsg.cs">
@@ -149,6 +158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MakeSign.resx">
       <DependentUpon>MakeSign.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="mq.resx">
+      <DependentUpon>mq.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
