--- a/WindowsFormApp/packages.config
+++ b/WindowsFormApp/packages.config
@@ -7,6 +7,7 @@
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="NRobotsPatched" version="1.0.5.0" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="3.6.6" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
