--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -247,6 +247,7 @@
     <Compile Include="extension\PollyExtension.cs" />
     <Compile Include="extension\StringExtension.cs" />
     <Compile Include="extension\ReflectionExtension.cs" />
+    <Compile Include="extension\TaskExtension.cs" />
     <Compile Include="extension\ValidateExtension.cs" />
     <Compile Include="helper\EncodingHelper.cs" />
     <Compile Include="helper\LanguageHelper.cs" />
