--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -192,6 +192,7 @@
     <Compile Include="cache\CacheExtension.cs" />
     <Compile Include="cache\CacheManager.cs" />
     <Compile Include="cache\FireWall.cs" />
+    <Compile Include="cache\HttpContextCacheProvider.cs" />
     <Compile Include="cache\ICacheProvider.cs" />
     <Compile Include="cache\MemoryCacheProvider.cs" />
     <Compile Include="cache\MultiLayerCache.cs" />
