--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -376,7 +376,14 @@
     </None>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="core\contract\" />
+    <Folder Include="core\ioc\" />
+    <Folder Include="data\elasticsearch\" />
+    <Folder Include="data\mongodb\" />
+    <Folder Include="data\orm\" />
+    <Folder Include="data\redis\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
