--- a/Hiwjcn.Test/packages.config
+++ b/Hiwjcn.Test/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Akka" version="1.3.2" targetFramework="net45" />
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net45" />
   <package id="Autofac" version="4.6.2" targetFramework="net45" />
   <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
@@ -7,7 +8,7 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="MongoDB.Bson" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver" version="2.4.4" targetFramework="net45" />
   <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net45" />
@@ -21,6 +22,7 @@
   <package id="RazorEngine" version="3.10.0" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
   <package id="StringTemplate4" version="4.0.8" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net45" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
@@ -28,7 +30,7 @@
   <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
   <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net45" />
-  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net45" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net45" />
   <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
-  <package id="ZooKeeperNetEx" version="3.4.9.4" targetFramework="net45" />
+  <package id="ZooKeeperNetEx" version="3.4.10.1" targetFramework="net45" />
 </packages>
