--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -187,8 +187,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="actor\ActorTest.cs" />
-    <Compile Include="actor\AkkaHelper.cs" />
+    <Compile Include="distributed\akka\ActorTest.cs" />
+    <Compile Include="distributed\akka\AkkaHelper.cs" />
     <Compile Include="extra\api\BaiduTranslateHelper.cs" />
     <Compile Include="extra\api\UmengPushHelper.cs" />
     <Compile Include="cache\CacheExtension.cs" />
@@ -383,6 +383,9 @@
     <Folder Include="data\mongodb\" />
     <Folder Include="data\orm\" />
     <Folder Include="data\redis\" />
+    <Folder Include="distributed\orleans\" />
+    <Folder Include="distributed\redis\" />
+    <Folder Include="distributed\zookeeper\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
