--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -267,7 +267,8 @@
     <Compile Include="infrastructure\entity\TimeBaseEntity.cs" />
     <Compile Include="infrastructure\entity\TreeBaseEntity.cs" />
     <Compile Include="infrastructure\ServiceBase.cs" />
-    <Compile Include="infrastructure\service\AuthApiServiceFromDbBase.cs" />
+    <Compile Include="infrastructure\provider\AuthApiServiceFromDbBase.cs" />
+    <Compile Include="infrastructure\service\AuthLoginService.cs" />
     <Compile Include="infrastructure\service\AuthServiceBase.cs" />
     <Compile Include="infrastructure\service\TreeServiceBase.cs" />
     <Compile Include="ioc\AppContextExtension.cs" />
