--- a/Hiwjcn.Service/Hiwjcn.Service.csproj
+++ b/Hiwjcn.Service/Hiwjcn.Service.csproj
@@ -78,8 +78,8 @@
     <Reference Include="Qiniu, Version=7.2.15.0, Culture=neutral, PublicKeyToken=2894d75bb9f220bf, processorArchitecture=MSIL">
       <HintPath>..\packages\Qiniu.Shared.7.2.15\lib\net45\Qiniu.dll</HintPath>
     </Reference>
-    <Reference Include="QPL.WebService.TraderAccess.Core, Version=1.0.4.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\QPL.WebService.TraderAccess.Core.1.0.4.1\lib\net45\QPL.WebService.TraderAccess.Core.dll</HintPath>
+    <Reference Include="QPL.WebService.TraderAccess.Core, Version=1.0.4.9, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\QPL.WebService.TraderAccess.Core.1.0.4.9\lib\net45\QPL.WebService.TraderAccess.Core.dll</HintPath>
     </Reference>
     <Reference Include="Quartz, Version=2.6.1.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
       <HintPath>..\packages\Quartz.2.6.1\lib\net40\Quartz.dll</HintPath>
@@ -142,7 +142,7 @@
     <Compile Include="Auth\AuthClientService.cs" />
     <Compile Include="Auth\AuthScopeService.cs" />
     <Compile Include="Auth\AuthTokenService.cs" />
-    <Compile Include="Auth\QPLSalesLoginService.cs" />
+    <Compile Include="Auth\TraderAccessLoginService.cs" />
     <Compile Include="Auth\TokenEventHandler.cs" />
     <Compile Include="ClearDataBaseService.cs" />
     <Compile Include="MyService.cs" />
