--- a/Lib/Lib.csproj
+++ b/Lib/Lib.csproj
@@ -369,6 +369,7 @@
     <Compile Include="helper\JsonHelper.cs" />
     <Compile Include="io\QrCode.cs" />
     <Compile Include="helper\XmlHelper.cs" />
+    <Compile Include="rpc\WcfInterception.cs" />
     <Compile Include="rpc\WebApiHelper.cs" />
     <Compile Include="task\QuartzJobBase.cs" />
     <Compile Include="task\ScheduleJobModel.cs" />
