--- a/Hiwjcn.Service/Hiwjcn.Service.csproj
+++ b/Hiwjcn.Service/Hiwjcn.Service.csproj
@@ -78,6 +78,12 @@
     <Reference Include="Qiniu, Version=7.2.15.0, Culture=neutral, PublicKeyToken=2894d75bb9f220bf, processorArchitecture=MSIL">
       <HintPath>..\packages\Qiniu.Shared.7.2.15\lib\net45\Qiniu.dll</HintPath>
     </Reference>
+    <Reference Include="QPL.WebService.Common.Model, Version=1.0.0.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\QPL.WebService.Common.Model.1.0.0.6\lib\net45\QPL.WebService.Common.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="QPL.WebService.Product.Core, Version=1.0.1.34, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\QPL.WebService.Product.Core.1.0.1.34\lib\net45\QPL.WebService.Product.Core.dll</HintPath>
+    </Reference>
     <Reference Include="QPL.WebService.TraderAccess.Core, Version=1.0.4.9, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\QPL.WebService.TraderAccess.Core.1.0.4.9\lib\net45\QPL.WebService.TraderAccess.Core.dll</HintPath>
     </Reference>
@@ -169,6 +175,7 @@
     <Compile Include="User\UserEventHandler.cs" />
     <Compile Include="User\UserRoleBll.cs" />
     <Compile Include="User\UserService.cs" />
+    <Compile Include="WcfClientSet.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
