--- a/Hiwjcn.Service/packages.config
+++ b/Hiwjcn.Service/packages.config
@@ -17,6 +17,8 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
   <package id="Polly" version="5.4.0" targetFramework="net45" />
   <package id="Qiniu.Shared" version="7.2.15" targetFramework="net45" />
+  <package id="QPL.WebService.Common.Model" version="1.0.0.6" targetFramework="net45" />
+  <package id="QPL.WebService.Product.Core" version="1.0.1.34" targetFramework="net45" />
   <package id="QPL.WebService.TraderAccess.Core" version="1.0.4.9" targetFramework="net45" />
   <package id="Quartz" version="2.6.1" targetFramework="net45" />
   <package id="StackExchange.Redis" version="1.2.6" targetFramework="net45" />
