--- a/Hiwjcn.Web/Hiwjcn.Web.csproj
+++ b/Hiwjcn.Web/Hiwjcn.Web.csproj
@@ -111,6 +111,12 @@
     <Reference Include="Qiniu, Version=7.2.15.0, Culture=neutral, PublicKeyToken=2894d75bb9f220bf, processorArchitecture=MSIL">
       <HintPath>..\packages\Qiniu.Shared.7.2.15\lib\net45\Qiniu.dll</HintPath>
     </Reference>
+    <Reference Include="QPL.WebService.Common.Model, Version=1.0.0.6, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\QPL.WebService.Common.Model.1.0.0.6\lib\net45\QPL.WebService.Common.Model.dll</HintPath>
+    </Reference>
+    <Reference Include="QPL.WebService.Product.Core, Version=1.0.1.34, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\QPL.WebService.Product.Core.1.0.1.34\lib\net45\QPL.WebService.Product.Core.dll</HintPath>
+    </Reference>
     <Reference Include="SharpRaven, Version=1.5.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpRaven.1.5.1\lib\net45\SharpRaven.dll</HintPath>
     </Reference>
