--- a/net-45/Lib.extra/packages.config
+++ b/net-45/Lib.extra/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Akka" version="1.3.4" targetFramework="net462" />
+  <package id="Dapper" version="1.50.4" targetFramework="net462" />
   <package id="Elasticsearch.Net" version="2.4.6" targetFramework="net462" />
   <package id="log4net" version="2.0.8" targetFramework="net462" />
+  <package id="MySql.Data" version="6.9.11" targetFramework="net462" />
   <package id="NEST" version="2.4.6" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="Polly" version="5.8.0" targetFramework="net462" />
